project('demo-cpp', 'c', 'cpp', 'objc', 'objcpp',
version : '0.1.0',
default_options : ['cpp_std=c++17']
)


deps = []
#src_files = ['src/thread.c']
#src_files = ['src/demo.cpp']
src_files = ['src/demo.c']
include_dirs = []
link_args = []

#subdir('src')


executable('demo-cpp', src_files,
    include_directories: include_dirs,
    dependencies: deps,
    link_args: link_args
)

executable('baitap9', 'src/baitap9.c',
    include_directories: include_dirs,
    dependencies: deps,
    link_args: link_args
)

executable('baitap10', 'src/baitap10.c',
    include_directories: include_dirs,
    dependencies: deps,
    link_args: link_args
)

executable('baitap28', 'src/baitap28.c',
    include_directories: include_dirs,
    dependencies: deps,
    link_args: link_args
)

executable('baitap11', 'src/baitap11.c',
    include_directories: include_dirs,
    dependencies: deps,
    link_args: link_args
)

executable('baitap47', 'src/baitap47.c',
    include_directories: include_dirs,
    dependencies: deps,
    link_args: link_args
)

executable('baitap48', 'src/baitap48.c',
    include_directories: include_dirs,
    dependencies: deps,
    link_args: link_args
)

executable('baitap58', 'src/baitap58.c',
    include_directories: include_dirs,
    dependencies: deps,
    link_args: link_args
)

executable('baitap59', 'src/baitap59.c',
    include_directories: include_dirs,
    dependencies: deps,
    link_args: link_args
)



executable('array', 'src/array.c',
    include_directories: include_dirs,
    dependencies: deps,
    link_args: link_args
)


executable('array2', 'src/array2.c',
    include_directories: include_dirs,
    dependencies: deps,
    link_args: link_args
)

executable('array3', 'src/array3.c',
    include_directories: include_dirs,
    dependencies: deps,
    link_args: link_args
)

executable('linked-list', 'src/linked-list.c',
    include_directories: include_dirs,
    dependencies: deps,
    link_args: link_args
)

executable('singly-linked-list', 'src/singly-linked-list.c',
    include_directories: include_dirs,
    dependencies: deps,
    link_args: link_args
)
